<resources>
    <string name="app_name">Sirius</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>

    <string name="appName">DoTA 2</string>
    <string name="category1">MOBA</string>
    <string name="category2">MULTIPLAYER</string>
    <string name="category3">STRATEGY</string>
    <string name="appRating">4.9</string>
    <string name="reviewsCount">70M</string>
    <string name="reviewsCount2">70M Reviews</string>
    <string name="reviewsHeader">Reviews and ratings</string>
    <string name="appDescription">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the \"Ancient\", whilst defending their own.</string>
    <string name="commentatorName1">Auguste Conte</string>
    <string name="commentatorName2">Jang Marcelino</string>
    <string name="commentDate">February 14, 2019</string>
    <string name="commentText">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="buttonText">Install</string>
</resources>